fixed missing border

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1304,8 +1304,8 @@ footer {
   padding: 5px 1%;
   padding-bottom: 5px;
   background: white;
-  border: 0.5px solid #B2B2B2;
-  border-top: 0.5px solid white;
+  border: 1px solid #B2B2B2;
+  border-top: 1px solid white;
 
   @media @mobile {
     padding: 5px 2%;
@@ -1396,7 +1396,7 @@ footer {
 }
 
 .date13 {
-  border-bottom: 0.5px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
 #year0, #year13 {
